--- a/css/index.css
+++ b/css/index.css
@@ -40,6 +40,7 @@ body {
     font-family: Inter;
     background-color: #EDF2EC;
     background-size: 100%;
+    scroll-behavior: smooth;
 }
 .wrapper {
     min-height: 100%;
@@ -145,7 +146,7 @@ h1 {
     color: #636060;
     margin-bottom: 48px;
 }
-.learn_more__link{
+.learn__more{
     display: block;
     padding: 11px 26px;
     height: 100%;
@@ -159,8 +160,9 @@ h1 {
     font-size: 16px;
     display: block;
     background-color: #EDF2EC;
+    cursor: pointer;
 }
-.learn_more__link:hover {
+.learn__more:hover {
     color: #FFFFFF;
     background-color: #E06733;
     transition: 0.5s;
@@ -202,8 +204,7 @@ h1 {
 /*-------------ABOUT-END-------------------------------------------- */
 /*-------------SERVICES-START-------------------------------------------- */
 .service {
-    display: flex;
-    flex-wrap: wrap;
+    margin-bottom: 68px;
 }
 .services__content_container{
     display: flex;
@@ -220,13 +221,7 @@ h1 {
     flex-basis: 308px;
 }
 .buttons__service{
-    flex: none;
-}
-.style_buttons__service:link, .style_buttons__service:visited {
-    border-radius: 5px;
-    padding: 12px 40px;
-    text-decoration: none;
-    color: #E06733;
+    display: inline-flex;
 }
 .orange_button__services{
     color: #E06733;
@@ -239,9 +234,13 @@ h1 {
     background-color: #EDF2EC;
     padding: 12px 0;
     min-width: 160px;
+    margin: 0px 38px 0px 0px;
+    cursor: pointer;
 }
-.orange_button__services:not(:last-child){
-    margin: 0px 33px 0px 0px;
+.orange_button__services:hover{
+    background-color: #E06733;
+    color: #FFFFFF;
+    transition: 0.5s;
 }
 .gardens {}
 .lawn {}
@@ -289,13 +288,116 @@ h1 {
     color: #717171;
 }
 .planting__service {}
-
 .lawn__care {}
-
 .lawn__service {}
 /*-------------SERVICES-END-------------------------------------------- */
+/*-------------PRICES-START--------------------------------------- */
 .prices {}
 
+.prices__help_container{
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.prices__container {    
+    flex-direction: column;
+    display: flex;
+    align-items: flex-start;
+}
+.h2__prices {
+    color: #000000;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: calc(48 / 40 * 100%);
+    margin: 26px 0px 58px 0px;
+}
+.buttons__container_prices {
+    border: 1px solid #E3E1D5;
+    border-radius: 20px;
+    padding: 34px 40px;
+    margin-bottom: 130px;
+    max-width: 330px;
+}
+.button__price_basics,
+.button__price_standard,
+.button__price_pro {
+}
+
+.button__price_standard{
+    margin: 32px 0px;
+}
+.buttons__font_prices{
+font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: calc(20 / 20 * 100%);
+    color: #000000;
+}
+.link__basics,
+.link__standard,
+.link__pro {
+    background: #EDF2EC;
+    border-radius: 20px;
+    width: 250px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.link__basics:hover,
+.link__standard:hover,
+.link__pro:hover {
+    background: #D6E7D2;
+    transition: 0.5s;
+}
+.help__container {
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+    align-items: flex-end;
+    flex-basis: 452px;
+    margin: 26px 0px;
+}
+.h2__help {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: calc(50 / 40 * 100%);
+    color: #000000;
+    text-align: right;
+}
+.h2__green_help {
+    color: #499A18;
+}
+.button__help_contacts {
+    font-family: 'Inika';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: calc(26 / 20 * 100%);
+    text-align: center;
+    color: #E06733;
+    border: 1px solid #E06733;
+    border-radius: 5px;    
+    background-color: #FFFFFF;
+    padding: 10px 32px;
+    cursor: pointer;
+    margin: 40px 0;
+}
+.button__help_contacts:hover {
+    color: #FFFFFF;
+    background-color: #E06733;
+    transition: 0.5s;
+}
+.leafs__help {
+    width: 155px;
+    height: 175px;
+}
+/*-------------PRICES-END--------------------------------------- */
 .contacts {}
 
 .footer {}
